--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,9 +6,14 @@ authors = [
     {name = "Hannah Schlaucher",email = "hanschlau@gmail.com"}
 ]
 readme = "README.md"
-requires-python = ">=3.11"
+requires-python = ">=3.10"
 dependencies = [
-    "torch (==2.2.2)"
+    "torch (==2.2.2)",
+    "ipykernel (>=6.29.5,<7.0.0)",
+    "notebook (>=7.4.1,<8.0.0)",
+    "pandas (>=2.2.3,<3.0.0)",
+    "ipywidgets (>=8.1.6,<9.0.0)",
+    "numpy (==1.26.4)"
 ]
 [tool.poetry]
 package-mode = false
