--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,11 @@ dependencies = [
     "notebook (>=7.4.1,<8.0.0)",
     "pandas (>=2.2.3,<3.0.0)",
     "ipywidgets (>=8.1.6,<9.0.0)",
-    "numpy (==1.26.4)"
+    "numpy (==1.26.4)",
+    "matplotlib (>=3.10.1,<4.0.0)",
+    "bertopic (>=0.17.0,<0.18.0)",
+    "sentence-transformers (>=4.1.0,<5.0.0)",
+    "stopwordsiso (>=0.6.1,<0.7.0)"
 ]
 [tool.poetry]
 package-mode = false
