--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = [
     {name = "Hannah Schlaucher",email = "hanschlau@gmail.com"}
 ]
 readme = "README.md"
-requires-python = ">=3.10"
+requires-python = ">=3.10,<3.13"
 dependencies = [
     "torch (==2.2.2)",
     "ipykernel (>=6.29.5,<7.0.0)",
@@ -17,7 +17,15 @@ dependencies = [
     "matplotlib (>=3.10.1,<4.0.0)",
     "bertopic (>=0.17.0,<0.18.0)",
     "sentence-transformers (>=4.1.0,<5.0.0)",
-    "stopwordsiso (>=0.6.1,<0.7.0)"
+    "stopwordsiso (>=0.6.1,<0.7.0)",
+    "nltk (>=3.9.1,<4.0.0)",
+    "wordcloud (>=1.9.4,<2.0.0)",
+    "seaborn (>=0.13.2,<0.14.0)",
+    "spacy (>=3.8.5,<4.0.0)",
+    "langdetect (>=1.0.9,<2.0.0)"
 ]
 [tool.poetry]
 package-mode = false
+[tool.poetry.group.dev.dependencies]
+ipykernel = "^6.29.5"
+
