--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = [
     {name = "Hannah Schlaucher",email = "hanschlau@gmail.com"}
 ]
 readme = "README.md"
-requires-python = ">=3.10"
+requires-python = ">=3.10,<3.11"
 dependencies = [
     "torch (==2.2.2)",
     "ipykernel (>=6.29.5,<7.0.0)",
@@ -17,7 +17,13 @@ dependencies = [
     "matplotlib (>=3.10.1,<4.0.0)",
     "bertopic (>=0.17.0,<0.18.0)",
     "sentence-transformers (>=4.1.0,<5.0.0)",
-    "stopwordsiso (>=0.6.1,<0.7.0)"
+    "stopwordsiso (>=0.6.1,<0.7.0)",
+    "emoji (>=2.14.1,<3.0.0)",
+    "rake-nltk (>=1.0.6,<2.0.0)",
+    "langdetect (>=1.0.9,<2.0.0)",
+    "protobuf (>=6.30.2,<7.0.0)",
+    "tiktoken (>=0.9.0,<0.10.0)",
+    "sentencepiece (>=0.2.0,<0.3.0)"
 ]
 [tool.poetry]
 package-mode = false
