--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,11 @@ dependencies = [
     "langdetect (>=1.0.9,<2.0.0)",
     "protobuf (>=6.30.2,<7.0.0)",
     "tiktoken (>=0.9.0,<0.10.0)",
-    "sentencepiece (>=0.2.0,<0.3.0)"
+    "sentencepiece (>=0.2.0,<0.3.0)",
+    "google-cloud (>=0.34.0,<0.35.0)",
+    "google-cloud-bigquery (>=3.31.0,<4.0.0)",
+    "gcloud (>=0.18.3,<0.19.0)",
+    "db-dtypes (>=1.4.2,<2.0.0)"
 ]
 [tool.poetry]
 package-mode = false
