--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,6 @@ authors = [
 ]
 readme = "README.md"
 requires-python = ">=3.10,<3.11"
-requires-python = ">=3.10,<3.11"
 dependencies = [
     "torch (==2.2.2)",
     "ipykernel (>=6.29.5,<7.0.0)",
@@ -28,7 +27,8 @@ dependencies = [
     "google-cloud (>=0.34.0,<0.35.0)",
     "google-cloud-bigquery (>=3.31.0,<4.0.0)",
     "gcloud (>=0.18.3,<0.19.0)",
-    "db-dtypes (>=1.4.2,<2.0.0)"
+    "db-dtypes (>=1.4.2,<2.0.0)",
+    "gensim (>=4.3.3,<5.0.0)"
 ]
 [tool.poetry]
 package-mode = false
