--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,8 @@ dependencies = [
     "gcloud (>=0.18.3,<0.19.0)",
     "db-dtypes (>=1.4.2,<2.0.0)",
     "streamlit (>=1.45.1,<2.0.0)",
-    "watchdog (>=6.0.0,<7.0.0)"
+    "watchdog (>=6.0.0,<7.0.0)",
+    "circlify (>=0.15.0,<0.16.0)"
 ]
 [tool.poetry]
 package-mode = false
