--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,8 @@ dependencies = [
     "db-dtypes (>=1.4.2,<2.0.0)",
     "streamlit (>=1.45.1,<2.0.0)",
     "watchdog (>=6.0.0,<7.0.0)",
-    "circlify (>=0.15.0,<0.16.0)"
+    "circlify (>=0.15.0,<0.16.0)",
+    "spacy (>=3.8.7,<4.0.0)"
 ]
 [tool.poetry]
 package-mode = false
