--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,8 @@ dependencies = [
     "google-cloud-bigquery (>=3.31.0,<4.0.0)",
     "gcloud (>=0.18.3,<0.19.0)",
     "db-dtypes (>=1.4.2,<2.0.0)",
-    "gensim (>=4.3.3,<5.0.0)"
+    "gensim (>=4.3.3,<5.0.0)",
+    "burst-detection (>=0.1.3,<0.2.0)"
 ]
 [tool.poetry]
 package-mode = false
