--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ dependencies = [
     "emoji (>=2.14.1,<3.0.0)",
     "rake-nltk (>=1.0.6,<2.0.0)",
     "langdetect (>=1.0.9,<2.0.0)",
-    "protobuf (>=6.30.2,<7.0.0)",
+    "protobuf (<3.19.6)",
     "tiktoken (>=0.9.0,<0.10.0)",
     "sentencepiece (>=0.2.0,<0.3.0)",
     "google-cloud (>=0.34.0,<0.35.0)",
@@ -29,7 +29,15 @@ dependencies = [
     "gcloud (>=0.18.3,<0.19.0)",
     "db-dtypes (>=1.4.2,<2.0.0)",
     "gensim (>=4.3.3,<5.0.0)",
-    "burst-detection (>=0.1.3,<0.2.0)"
+    "burst-detection (>=0.1.3,<0.2.0)",
+    "spacy (>=3.8.7,<4.0.0)",
+    "vadersentiment (>=3.3.2,<4.0.0)",
+    "lightgbm (>=4.6.0,<5.0.0)",
+    "seaborn (>=0.13.2,<0.14.0)",
+    "tensorflow-io-gcs-filesystem (>=0.27,<0.28)",
+    "tensorflow (>=2.10,<2.11)",
+    "xgboost (>=3.0.2,<4.0.0)",
+    "shap (>=0.48.0,<0.49.0)"
 ]
 [tool.poetry]
 package-mode = false
