--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,6 @@ dependencies = [
     "emoji (>=2.14.1,<3.0.0)",
     "rake-nltk (>=1.0.6,<2.0.0)",
     "langdetect (>=1.0.9,<2.0.0)",
-    "protobuf (<3.19.6)",
     "tiktoken (>=0.9.0,<0.10.0)",
     "sentencepiece (>=0.2.0,<0.3.0)",
     "google-cloud (>=0.34.0,<0.35.0)",
@@ -37,7 +36,8 @@ dependencies = [
     "tensorflow-io-gcs-filesystem (>=0.27,<0.28)",
     "tensorflow (>=2.10,<2.11)",
     "xgboost (>=3.0.2,<4.0.0)",
-    "shap (>=0.48.0,<0.49.0)"
+    "shap (>=0.48.0,<0.49.0)",
+    "protobuf (<3.20)"
 ]
 [tool.poetry]
 package-mode = false
