--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,8 +31,7 @@ dependencies = [
     "watchdog (>=6.0.0,<7.0.0)",
     "circlify (>=0.15.0,<0.16.0)",
     "spacy (>=3.8.7,<4.0.0)",
-    "streamlit-option-menu (>=0.4.0,<0.5.0)"
-    "gensim (>=4.3.3,<5.0.0)"
+    "streamlit-option-menu (>=0.4.0,<0.5.0)",
     "gensim (>=4.3.3,<5.0.0)",
     "burst-detection (>=0.1.3,<0.2.0)",
     "spacy (>=3.8.7,<4.0.0)",
