--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,10 +39,9 @@ dependencies = [
     "lightgbm (>=4.6.0,<5.0.0)",
     "seaborn (>=0.13.2,<0.14.0)",
     "tensorflow-io-gcs-filesystem (>=0.27,<0.28)",
-    "tensorflow (>=2.10,<2.11)",
     "xgboost (>=3.0.2,<4.0.0)",
     "shap (>=0.48.0,<0.49.0)",
-    "protobuf (<3.20)"
+    "wordcloud (>=1.9.4,<2.0.0)",
 ]
 [tool.poetry]
 package-mode = false
