--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.10,<3.11"
 dependencies = [
-    "torch (==2.2.2)",
+    "torch[macos] (>=2.6.0,<3.0.0)",
     "ipykernel (>=6.29.5,<7.0.0)",
     "notebook (>=7.4.1,<8.0.0)",
     "pandas (>=2.2.3,<3.0.0)",
@@ -38,10 +38,10 @@ dependencies = [
     "vadersentiment (>=3.3.2,<4.0.0)",
     "lightgbm (>=4.6.0,<5.0.0)",
     "seaborn (>=0.13.2,<0.14.0)",
-    "tensorflow-io-gcs-filesystem (>=0.27,<0.28)",
     "xgboost (>=3.0.2,<4.0.0)",
     "shap (>=0.48.0,<0.49.0)",
     "wordcloud (>=1.9.4,<2.0.0)",
+    "tensorflow-io-gcs-filesystem (==0.36.0)",
 ]
 [tool.poetry]
 package-mode = false
